--- a/angryip/angryip.nuspec
+++ b/angryip/angryip.nuspec
@@ -1,9 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--Do not remove this test for UTF-8: if “Ω” doesn’t appear as greek uppercase omega letter enclosed in quotation marks, you should use an editor that supports UTF-8, not this one.-->
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>angryip</id>
-    <version>3.7.2</version>
+    <version>3.7.3</version>
     <title>Angry IP Scanner (Installer)</title>
     <authors>angryziber</authors>
     <owners>bcurran3</owners>
@@ -15,8 +15,7 @@
     <docsUrl>http://angryip.org/faq/</docsUrl>
     <iconUrl>https://cdn.staticaly.com/gh/bcurran3/ChocolateyPackages/master/angryip/angryip_icon.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>
----
+    <description>---
 ### [choco://angryip](choco://angryip)
 To use choco:// protocol URLs, install [(unofficial) choco:// Protocol support ](https://chocolatey.org/packages/choco-protocol-support)
 ---
@@ -45,13 +44,12 @@ It runs on Linux, Windows, and Mac OS X, possibly supporting other platforms as 
 
 ---
 **Click here to [Patreon-ize](https://www.patreon.com/bcurran3) the package maintainer.**
----
-    </description>
+---</description>
     <summary>Angry IP Scanner - fast and friendly network scanner</summary>
     <releaseNotes>https://raw.githubusercontent.com/angryip/ipscan/master/RELEASE-NOTES</releaseNotes>
     <tags>angryziber angryip ipscan angry scanner network ip foss cross-platform</tags>
     <dependencies>
-      <dependency id="javaruntime" />
+      <dependency id="javaruntime" version="8.0.40" />
     </dependencies>
   </metadata>
   <files>
