--- a/ammyy-admin/ammyy-admin.nuspec
+++ b/ammyy-admin/ammyy-admin.nuspec
@@ -1,18 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!-- Do not remove this test for UTF-8: if “Ω” doesn’t appear as greek uppercase omega letter enclosed in quotation marks, you should use an editor that supports UTF-8, not this one. -->
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>ammyy-admin</id>
     <title>Ammyy Admin (Portable)</title>
-    <version>3.8.0.0</version>
+    <version>3.10.0.0</version>
     <authors>Ammyy</authors>
     <owners>bcurran3</owners>
     <summary>Zero-Config Remote Desktop Software Ammyy Admin. The easiest way to establish remote desktop connection.</summary>
     <description>
-___
-[choco://ammyy-admin](choco://ammyy-admin)
+---
+
+### [choco://ammyy-admin](choco://ammyy-admin)
 To use choco:// protocol URLs, install [(unofficial) choco:// Protocol support ](https://chocolatey.org/packages/choco-protocol-support)
-___
+
+---
 
 ![Screenshot of Ammyy Admin](http://www.ammyy.com/img/en/01_08.png)
 
@@ -26,27 +28,30 @@ Remote desktop connection becomes easy with Ammyy Admin.
 
 [ATTENTION! Please read this before giving UNKNOWN people access to your computer](http://www.ammyy.com/en/admin_mu.html)
 
-###System Administration
+### System Administration
 You can manage network computers and servers remotely without complicated NAT settings adjustments or Firewall problems. Assist your colleagues with remote access software and be confident all the transmitted data is reliably secured. Using Ammyy Admin as a tool for remote desktop connection and control is the best way to save time and money.
 [Learn more about remote system administration](http://www.ammyy.com/en/solutions.html#sys_admin)
 
-###Remote office
+### Remote office
 You will have quick and easy access to your remote office PC desktop via the Internet from anywhere, at any time. Remote desktop access makes it easy to retrieve necessary documents and files from your work PC or activate specific software installed on the office computer. Ammyy Admin is also a perfect solution for enabling employees to work offsite from a remote location.
 [Learn more about remote office](http://www.ammyy.com/en/solutions.html#r_office)
 
-###On-line presentations/distance education
+### On-line presentations/distance education
 With Ammyy Admin it's easy to arrange on-line presentations or hold virtual classes for distance education. You can host your presentation featuring class materials right in the remote desktops of meeting participants or students in the virtual classroom, communicating with them via real-time voice chat. 
 [Learn more about on-line presentations and distance education](http://www.ammyy.com/en/solutions.html#d_education)
 
 **[PACKAGE NOTES](https://github.com/bcurran3/ChocolateyPackages/blob/master/ammyy-admin/readme.md)**
-
-***
-**Click here to [Patreon-ize](https://www.patreon.com/bcurran3) the package maintainer.**
-***
     
+
+---
+
+**Click here to [Patreon-ize](https://www.patreon.com/bcurran3) the package maintainer.**
+
+---
+
 </description>
     <projectUrl>http://www.ammyy.com/</projectUrl>
-	<packageSourceUrl>https://github.com/bcurran3/ChocolateyPackages/tree/master/ammyy-admin</packageSourceUrl>
+    <packageSourceUrl>https://github.com/bcurran3/ChocolateyPackages/tree/master/ammyy-admin</packageSourceUrl>
     <docsUrl>http://www.ammyy.com/en/admin_manual.html</docsUrl>
     <bugTrackerUrl>http://www.ammyy.com/en/press.html</bugTrackerUrl>
     <tags>ammyy admin remote control desktop teamviewer rdp portable</tags>
