--- a/atomicparsley/atomicparsley.nuspec
+++ b/atomicparsley/atomicparsley.nuspec
@@ -3,23 +3,30 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>atomicparsley</id>
-    <version>0.9.0</version>
+    <version>20200701.154658.0</version>
     <owners>bcurran3</owners>
     <packageSourceUrl>https://github.com/bcurran3/ChocolateyPackages/tree/master/atomicparsley</packageSourceUrl>
     <title>AtomicParsley (Portable)</title>
     <authors>BStory, puck_lock</authors>
     <iconUrl>https://cdn.staticaly.com/gh/bcurran3/ChocolateyPackages/master/atomicparsley/atomicparsley_icon.png</iconUrl>
-    <projectUrl>http://atomicparsley.sourceforge.net/</projectUrl>
-    <licenseUrl>https://sourceforge.net/directory/os:windows/license:gpl/</licenseUrl>
+    <projectUrl>https://github.com/wez/atomicparsley</projectUrl>
+    <licenseUrl>https://github.com/wez/atomicparsley/blob/master/COPYING</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <projectSourceUrl>https://sourceforge.net/p/atomicparsley/code/HEAD/tree/</projectSourceUrl>
+    <projectSourceUrl>https://github.com/wez/atomicparsley</projectSourceUrl>
     <docsUrl>http://atomicparsley.sourceforge.net/documents.html</docsUrl>
     <mailingListUrl>https://sourceforge.net/p/atomicparsley/discussion/</mailingListUrl>
-    <bugTrackerUrl>https://sourceforge.net/p/atomicparsley/bugs/</bugTrackerUrl>
+    <bugTrackerUrl>https://github.com/wez/atomicparsley/issues</bugTrackerUrl>
     <tags>atomicparsley metadata editor portable</tags>
     <summary>AtomicParsley is a lightweight command line program that can read and set iTunes-style metadata tags in MPEG-4 files and 3gp assets in 3GPP/3GPP2 files.</summary>
     <description>
-###AtomicParsley is a lightweight command line program for reading, parsing and setting metadata into MPEG-4 files supporting these styles of metadata:
+---
+
+### [choco://atomicparsley](choco://atomicparsley)
+To use choco:// protocol URLs, install [(unofficial) choco:// Protocol support ](https://chocolatey.org/packages/choco-protocol-support)
+
+---
+
+### AtomicParsley is a lightweight command line program for reading, parsing and setting metadata into MPEG-4 files supporting these styles of metadata:
 
 * iTunes-style metadata into .mp4, .m4a, .m4p, .m4v, .m4b files
 * 3gp-style assets (3GPP TS 26.444 version 6.4.0 Release 6 specification conforming) in 3GPP, 3GPP2, MobileMP4 and derivatives
@@ -31,8 +38,16 @@ The MPEG-4 container is based on Apple's Quicktime .mov container (just more san
 With the exception of artwork, all iTunes-style tags support only 1 piece of metadata - you can't have for example 3 title tags. 3gp assets and copyright notices support multiple tags, but they must differ in the language setting for that tag. You can have for example 3 title tags, but 1 in english, 1 in spanish, 1 in undefined. All iTunes-style text metadata is always in UTF-8; 3gp assets and copyright notices can be in set in UTF-8 or UTF-16. All strings are converted internally to UTF-8, converting as necessary. On *nix platforms, input is in UTF-8; the native Windows port supports full UTF-16 input.
 
 **[PACKAGE NOTES](https://github.com/bcurran3/ChocolateyPackages/blob/master/atomicparsley/readme.md)**
-    </description>
-    <releaseNotes>http://atomicparsley.sourceforge.net/changelog.html</releaseNotes>
+    
+
+---
+
+**Click here to [Patreon-ize](https://www.patreon.com/bcurran3) the package maintainer.**
+
+---
+
+</description>
+    <releaseNotes>https://github.com/wez/atomicparsley/releases</releaseNotes>
   </metadata>
   <files>
     <file src="tools\**" target="tools" />
